--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./bundle.js" defer></script>
   <title>Historical Events Finder</title>
-  <script></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app"> </div>
