Add dynamic score frames

--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="bundle.js" defer></script>
     <title>Bowling</title>
+    <style>
+      table,
+      td,
+      th {
+        border: 2px solid darkslateblue;
+        text-align: center;
+        vertical-align: middle;
+        border-collapse: collapse;
+      }
+      td {
+        padding: 40px;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
